--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/redux-logger": "^3.0.9",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
@@ -26,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
